Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-57428

[iOS] Adding QPixmap or QImage to clipboard fails

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9
    • 5.7.0, 5.8.0 Beta
    • QPA
    • iOS/tvOS/watchOS

    Description

      Steps to reproduce the issue.

      1. Run attached test application

      Expected outcome:
      The QPixmap added to the clipboard is also accessible from the clipboard

      Actual outcome:
      The QPixmap added to the clipboard is returning null when accessed

      Tested with iOS 10.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            richard Richard Moe Gustavsen
            kileppal Kimmo Leppälä
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes